--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
             <br />
             <h1>Cast</h1>
             <dl>
-                <dt>Founder</dt>
-                <dd>Daniel Malkafly</dd>
-                <dt>Creative ideas</dt>
-                <dd>Fabio Munhoz</dd>
+                <dt>In this birthday Jasmine, </dt>
+                <dd>I wish you abundant happiness and love</dd>
+                <dt>May all your dreams turn into reality</dt>
+                <dd>and may lady luck (that i don't believe on her ^^) visit you today</dd>
                 <dt>Operations</dt>
-                <dd>Gabriela Cardoso</dd>
-                <dt>Business Commands</dt>
-                <dd>Isabela Cardoso</dd>
-                <dt>Sales and Services</dt>
+                <dd>Happy birthday to one of the sweetest people I’ve ever known</dd>
+                <dt>May Allah bless you with life’s biggest joys</dt>
+                <dd>and never-ending BLISS</dd>
+                <dt>After all, you X, YOURSELF are a gift to this earth,</dt>
                 <dd>Alex Pinto</dd>
                 <dt>Social Media Handling</dt>
                 <dd>Felippe Linhares</dd>
