--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
    
-        <div class="header">
+        <!-- <div class="header">
             <div class="pull-right">
                 <br />
                 <iframe src="http://ghbtns.com/github-btn.html?user=malkafly&repo=endcredits&type=watch" allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
@@ -30,17 +30,17 @@
                 <iframe src="http://ghbtns.com/github-btn.html?user=malkafly&repo=endcredits&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
             </div>
             <h3 class="text-muted">End Credits</h3>
-        </div>
+        </div> -->
 
         <div class="jumbotron">
-            <h1>jQuery End Credits</h1>
+            <h1>Y.S Birthday Letter</h1>
             <p>Don't you think your site deserves an ending like in the movies? Show all your staff, your thanks, your logos and partners with this component!</p>
             <p>
-                <a class="btn btn-lg btn-success" href="#creditos" name="creditos">Open Credits</a>
+                <a class="btn btn-lg btn-success" href="#creditos" name="creditos">Open the Letter</a>
             </p>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-lg-12">
                 <blockquote>
                     <h4>End Credits</h4>
@@ -50,11 +50,11 @@
                     </small>
                 </blockquote>
             </div>
-        </div>
+        </div> -->
 
         <div class="footer">
             <p>&copy;
-                <a href="http://coletivobima.com.br">Coletivo Bima</a>&nbsp;2014 by <a href="http://twitter.com/malkafly">@malkafly</a></p>
+                <a href="https://www.facebook.com/profile.php?id=100065807610991">Yasmine Seghier</a>&nbsp;July 2022 by <a href="https://www.facebook.com/mega.uchiha.5">@El Megales</a></p>
         </div>
 
     </div>
