--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <div class="clearfix"></div>
     </div>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="static/endcredits.js"></script>
 </body>
 
