--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             <div class="clearfix"></div>
             <h1>Developed using</h1>
             <p>
-                <img src="static/microsoft.png">
-                <img src="static/windows-azure.png">
-                <img src="static/microsoft-bizspark.png">
+<!--                 <img src="static/microsoft.png"> -->
+<!--                 <img src="static/windows-azure.png"> -->
+<!--                 <img src="static/microsoft-bizspark.png"> -->
                 <img src="static/node.png">
                 <img src="static/jquery.png">
                 <img src="static/html5.png">
@@ -128,7 +128,8 @@
             </p>
             <h1>Powered by</h1>
             <p>
-                <img src="http://coletivobima.com.br/logo-bima.png">
+<!--                 <img src="http://coletivobima.com.br/logo-bima.png"> -->
+                     <img src="static/couple-avatar1.png">
             </p>
             <h1>Say Hail!</h1>
             <div class="clearfix"></div>
