--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
             </p>
             <h1>Powered by</h1>
             <p>
-<!--                 <img src="http://coletivobima.com.br/logo-bima.png"> -->
-                     <img src="static/couple-avatar1.png">
+                <img src="static/couple-avatar1.png">
             </p>
-            <h1>Say Hail!</h1>
+            <h1>Thanks!</h1>
             <div class="clearfix"></div>
             <div class="fineprint">All trademarks are the property of the trademark owners.
                 <br>All premier division football player are the property of premier
