--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </p>
             <h1>Powered by</h1>
             <p>
-<!--                 <img src="static/couple-avatar1.png"> -->
+                <img src="static/couple-av-resi.png">
             </p>
             <h1>Thanks!</h1>
             <div class="clearfix"></div>
