--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Don't you think your site deserves an ending like in the movies? Show all your staff, your thanks, your logos and partners with this component!">
+    <meta name="description"
+        content="Don't you think your site deserves an ending like in the movies? Show all your staff, your thanks, your logos and partners with this component!">
     <meta name="author" content="Daniel Malkafly @ Coletivo Bima">
     <title>End Credits by Coletivo Bima</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
@@ -21,8 +22,8 @@
 </head>
 
 <body>
-   
-        <!-- <div class="header">
+
+    <!-- <div class="header">
             <div class="pull-right">
                 <br />
                 <iframe src="http://ghbtns.com/github-btn.html?user=malkafly&repo=endcredits&type=watch" allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
@@ -32,15 +33,16 @@
             <h3 class="text-muted">End Credits</h3>
         </div> -->
 
-        <div class="jumbotron">
-            <h1>Y.S Birthday Letter</h1>
-            <p>Don't you think your site deserves an ending like in the movies? Show all your staff, your thanks, your logos and partners with this component!</p>
-            <p>
-                <a class="btn btn-lg btn-success" href="#creditos" name="creditos">Open the Letter</a>
-            </p>
-        </div>
+    <div class="jumbotron">
+        <h1>Y.S Birthday Letter</h1>
+        <p>Don't you think your site deserves an ending like in the movies? Show all your staff, your thanks, your logos
+            and partners with this component!</p>
+        <p>
+            <a class="btn btn-lg btn-success" href="#creditos" name="creditos">Open the Letter</a>
+        </p>
+    </div>
 
-        <!-- <div class="row">
+    <!-- <div class="row">
             <div class="col-lg-12">
                 <blockquote>
                     <h4>End Credits</h4>
@@ -52,10 +54,12 @@
             </div>
         </div> -->
 
-        <div class="footer">
-            <p>&copy;
-                <a href="https://www.facebook.com/profile.php?id=100065807610991">Yasmine Seghier</a>&nbsp;July 2022 by <a href="https://www.facebook.com/mega.uchiha.5">@El Megales</a></p>
-        </div>
+    <div class="footer">
+        <p>&copy;
+            <a href="https://www.facebook.com/profile.php?id=100065807610991">Yasmine Seghier</a>&nbsp;July 2022 by <a
+                href="https://www.facebook.com/mega.uchiha.5">@El Megales</a>
+        </p>
+    </div>
 
     </div>
     <!-- /container -->
@@ -70,32 +74,42 @@
                 <dd>I wish you abundant happiness and love</dd>
                 <dt>May all your dreams turn into reality</dt>
                 <dd>and may lady luck (that i don't believe on her ^^) visit you today</dd>
-                <dt>Operations</dt>
+                <dt>Happy birthday to one of the sweetest people I’ve ever known</dt>
                 <dd>Happy birthday to one of the sweetest people I’ve ever known</dd>
                 <dt>May Allah bless you with life’s biggest joys</dt>
                 <dd>and never-ending BLISS</dd>
                 <dt>After all, you X, YOURSELF are a gift to this earth,</dt>
-                <dd>Alex Pinto</dd>
-                <dt>Social Media Handling</dt>
-                <dd>Felippe Linhares</dd>
-                <dt>Tecnical Help</dt>
-                <dd>Danilo Costa</dd>
-                <dt>Developer #1</dt>
-                <dd>Rafael Albuquerque</dd>
-                <dt>Developer #2</dt>
-                <dd>Adrian Borsati</dd>
-                <dt>Data Base Analysis</dt>
-                <dd>Leandro Miyabayashi</dd>
-                <dt>Designer #1</dt>
-                <dd>Lucas Isvairosvikh</dd>
-                <dt>Map markers</dt>
-                <dd>Loraine Vilches</dd>
-                <dt>Infrastructure</dt>
-                <dd>Vinicius Moreira</dd>
-                <dt>Turkey partner</dt>
-                <dd>Ozgür Dinçer</dd>
+                <dd>May Allah bless you with life’s biggest joys</dd>
+                <dt>and never-ending BLISS</dt>
+                <dd>After all, you X, YOURSELF are a gift to this earth,</dd>
+                <dt>so you deserve ALL the best</dt>
+                <dd>Birthdays are just a new start,</dd>
+                <dt>a fresh beginning</dt>
+                <dd>and a time to pursue new endeavors,</dd>
+                <dt>with new goals</dt>
+                <dd>So, move FORWARD X Nd KEEP moving FORWARD</dd>
+                <dt>and never look backwards.</dt>
+                <dd>You are a very special person.</dd>
+                <dt>May today and all of your days be amazing,</dt>
+                <dd>cool, superb, and awesome nsh allah!</dd>
+                <dt>This is ur life, so count it by SMILES, not by Tears.</dt>
+                <dd>Count your age by ur BELOVEDs, not by years.</dd>
+                <dt>Count your happiness by PASSION, not by regrets ^^.</dt>
+                <dt>Be happy!</dt>
+                <dt>Today is the day you were brought into this WORLD</dt>
+                <dd>to be a blessing and inspiration to the people around you!</dd>
+                <dt>You are a WONDERFUL person!</dt>
+                <dt>May you be given more birthdays to fulfill all of your dreams nsh allah 🙏.</dt>
+                <dt>On your birthday,</dt>
+                <dt>I thought of giving you the cutest gift in the world.</dt>
+                <dt>But then I realized that is not POSSIBLE</dt>
+                <dt>because YOU X, YOURSELF are the CUTEST 🎁 gift in the WORLD ^^.</dt>
+                <dt>So, Happy, cool, amazing,</dt>
+                <dd>wonderful, beautiful, awesome,</dd>
+                <dt>gorgeous, fantastic, birthday 🎂</dt>
+                <dt>to the X.abulous X.mazing X.op X.ntelligent X.agical X.wesome ===> X🌹, n7abek X.</dt>
             </dl>
-            <h1>Moderators</h1>
+            <!-- <h1>Moderators</h1>
             <dl>
                 <dt>Lead Moderator</dt>
                 <dd>Paloma Perachini</dd>
@@ -107,20 +121,23 @@
                 <dd>Frank Alma</dd>
                 <dt>Moderator #3</dt>
                 <dd>Joe Magnata</dd>
-            </dl>
+            </dl> -->
             <h1>Special Thanks</h1>
-            <p>Cachorro Verde, Cantinho Animal, Diego Carneiro, Maitê Lima, Seiti Kaziami, Cecília Amodeo, FotoPet, Bruno Kenj, Juliana GM, Silvia Valadares, Lucas Romão, and more...</p>
+            <p>When I think about you Yasmine and our rich conversations, I feel a warmness inside.
+               I cannot hide my smiles, even when we are apart.
+               This connection is special, amazing, and I dare say, destiny.</p>
             <div class="clearfix"></div>
-            <h1>Special Thanks</h1>
-            <p>Patricia Tajima, Eduardo Lobo, Thiago Cavaleiro, Rafael Albuquerque, Rafael D'andrea, Seiti Kaziami, Domenica Mendes, André Vasconcelos, 
+            <!-- <h1>Special Thanks</h1>
+            <p>Patricia Tajima, Eduardo Lobo, Thiago Cavaleiro, Rafael Albuquerque, Rafael D'andrea, Seiti Kaziami,
+                Domenica Mendes, André Vasconcelos,
                 Rogério Rodrigues, Andrea Borsati, Erico Albino (Babuu!), Júlio Carneiro
-            </p>
+            </p> -->
             <div class="clearfix"></div>
             <h1>Developed using</h1>
             <p>
-<!--                 <img src="static/microsoft.png"> -->
-<!--                 <img src="static/windows-azure.png"> -->
-<!--                 <img src="static/microsoft-bizspark.png"> -->
+                <!--                 <img src="static/microsoft.png"> -->
+                <!--                 <img src="static/windows-azure.png"> -->
+                <!--                 <img src="static/microsoft-bizspark.png"> -->
                 <img src="static/node.png">
                 <img src="static/jquery.png">
                 <img src="static/html5.png">
@@ -134,7 +151,8 @@
             <div class="clearfix"></div>
             <div class="fineprint">All trademarks are the property of the trademark owners.
                 <br>All premier division football player are the property of premier
-                <br>division football team owners.</div>
+                <br>division football team owners.
+            </div>
 
         </div>
         <div class="clearfix"></div>
