Integrating mp3 with credits

--- a/index.html
+++ b/index.html
@@ -160,5 +160,5 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="static/endcredits.js"></script>
 </body>
-
+<audio src="static/NowWeAreFree.mp3" autoplay> </audio>
 </html>
