editing text casting

--- a/index.html
+++ b/index.html
@@ -69,69 +69,49 @@
             <div id="the-end">PetPaw.co</div>
             <br />
             <h1>Cast</h1>
-            <dl>
-                <dt>In this birthday Jasmine, </dt>
-                <dd>I wish you abundant happiness and love</dd>
-                <dt>May all your dreams turn into reality</dt>
-                <dd>and may lady luck (that i don't believe on her ^^) visit you today</dd>
-                <dt>Happy birthday to one of the sweetest people I’ve ever known</dt>
-                <dd>Happy birthday to one of the sweetest people I’ve ever known</dd>
-                <dt>May Allah bless you with life’s biggest joys</dt>
-                <dd>and never-ending BLISS</dd>
-                <dt>After all, you X, YOURSELF are a gift to this earth,</dt>
-                <dd>May Allah bless you with life’s biggest joys</dd>
-                <dt>and never-ending BLISS</dt>
-                <dd>After all, you X, YOURSELF are a gift to this earth,</dd>
-                <dt>so you deserve ALL the best</dt>
-                <dd>Birthdays are just a new start,</dd>
-                <dt>a fresh beginning</dt>
-                <dd>and a time to pursue new endeavors,</dd>
-                <dt>with new goals</dt>
-                <dd>So, move FORWARD X Nd KEEP moving FORWARD</dd>
-                <dt>and never look backwards.</dt>
-                <dd>You are a very special person.</dd>
-                <dt>May today and all of your days be amazing,</dt>
-                <dd>cool, superb, and awesome nsh allah!</dd>
-                <dt>This is ur life, so count it by SMILES, not by Tears.</dt>
-                <dd>Count your age by ur BELOVEDs, not by years.</dd>
-                <dt>Count your happiness by PASSION, not by regrets ^^.</dt>
-                <dt>Be happy!</dt>
-                <dt>Today is the day you were brought into this WORLD</dt>
-                <dd>to be a blessing and inspiration to the people around you!</dd>
-                <dt>You are a WONDERFUL person!</dt>
-                <dt>May you be given more birthdays to fulfill all of your dreams nsh allah 🙏.</dt>
-                <dt>On your birthday,</dt>
-                <dt>I thought of giving you the cutest gift in the world.</dt>
-                <dt>But then I realized that is not POSSIBLE</dt>
-                <dt>because YOU X, YOURSELF are the CUTEST 🎁 gift in the WORLD ^^.</dt>
-                <dt>So, Happy, cool, amazing,</dt>
-                <dd>wonderful, beautiful, awesome,</dd>
-                <dt>gorgeous, fantastic, birthday 🎂</dt>
-                <dt>to the X.abulous X.mazing X.op X.ntelligent X.agical X.wesome ===> X🌹, n7abek X.</dt>
-            </dl>
-            <!-- <h1>Moderators</h1>
-            <dl>
-                <dt>Lead Moderator</dt>
-                <dd>Paloma Perachini</dd>
-                <dt>Moderator analysis</dt>
-                <dd>Gabriela Cardoso</dd>
-                <dt>Moderator #1</dt>
-                <dd>Gisele Souza</dd>
-                <dt>Moderator #2</dt>
-                <dd>Frank Alma</dd>
-                <dt>Moderator #3</dt>
-                <dd>Joe Magnata</dd>
-            </dl> -->
-            <h1>Special Thanks</h1>
-            <p>When I think about you Yasmine and our rich conversations, I feel a warmness inside.
-               I cannot hide my smiles, even when we are apart.
-               This connection is special, amazing, and I dare say, destiny.</p>
+            <p>In this birthday X,
+            I wish you abundant happiness and love.
+            May all your dreams turn into reality
+            and may lady luck (that i don't believe on her hhhh) visit you today.
+            Happy birthday to one of the sweetest people I’ve ever known.
+            May Allah bless you with life’s biggest joys
+            and never-ending BLISS.
+            After all, you X, YOURSELF are a gift to this earth,
+            so you deserve ALL the best.
+            Birthdays are just a new start,
+            a fresh beginning
+            and a time to pursue new endeavors,
+            with new goals.
+            So, move FORWARD X Nd KEEP moving FORWARD
+            with confidence and courage,
+            and never look backwards.
+            You are a very special person.
+            May today and all of your days be amazing,
+            cool, superb, and awesome nsh allah!
+            This is ur life, so count it by SMILES, not by Tears.
+            Count your age by ur BELOVEDs, not by years.
+            Count your happiness by PASSION, not by regrets ^^.
+            Be happy!
+            Today is the day you were brought into this WORLD
+            to be a blessing and inspiration to the people around you!
+            You are a WONDERFUL person!
+            May you be given more birthdays to fulfill all of your dreams nsh allah 🙏.
+            On your birthday,
+            I thought of giving you the cutest gift in the world.
+            But then I realized that is not POSSIBLE
+            because YOU X, YOURSELF are the CUTEST 🎁 gift in the WORLD ^^.
+            So, Happy, cool, amazing,
+            wonderful, beautiful, awesome,
+            gorgeous, fantastic, birthday 🎂
+            to the
+            X.abulous
+            X.mazing
+            X.op
+            X.ntelligent
+            X.agical
+            X.wesome
+            ===> X🌹, n7abek X.</p>
             <div class="clearfix"></div>
-            <!-- <h1>Special Thanks</h1>
-            <p>Patricia Tajima, Eduardo Lobo, Thiago Cavaleiro, Rafael Albuquerque, Rafael D'andrea, Seiti Kaziami,
-                Domenica Mendes, André Vasconcelos,
-                Rogério Rodrigues, Andrea Borsati, Erico Albino (Babuu!), Júlio Carneiro
-            </p> -->
             <div class="clearfix"></div>
             <h1>Developed using</h1>
             <p>
@@ -145,7 +125,7 @@
             </p>
             <h1>Powered by</h1>
             <p>
-                <img src="static/couple-av-resi.png">
+                <img src="static/resized-avat.png">
             </p>
             <h1>Thanks!</h1>
             <div class="clearfix"></div>
