--- a/index.html
+++ b/index.html
@@ -66,51 +66,52 @@
     <!-- Start of Credits -->
     <div id="titles">
         <div id="credits">
-            <div id="the-end">PetPaw.co</div>
+            <div id="the-end">Dear S.Yasmine</div>
             <br />
             <h1>Cast</h1>
-            <p>In this birthday X,
+            <p>In this birthday 04th of July 2022,
             I wish you abundant happiness and love.
             May all your dreams turn into reality
             and may lady luck (that i don't believe on her hhhh) visit you today.
             Happy birthday to one of the sweetest people I’ve ever known.
             May Allah bless you with life’s biggest joys
             and never-ending BLISS.
-            After all, you X, YOURSELF are a gift to this earth,
+            After all, you Yasmine, YOURSELF are a gift to this earth,
             so you deserve ALL the best.
             Birthdays are just a new start,
             a fresh beginning
             and a time to pursue new endeavors,
             with new goals.
-            So, move FORWARD X Nd KEEP moving FORWARD
+            So, move FORWARD Yasmine AND KEEP moving FORWARD
             with confidence and courage,
             and never look backwards.
             You are a very special person.
             May today and all of your days be amazing,
             cool, superb, and awesome nsh allah!
-            This is ur life, so count it by SMILES, not by Tears.
-            Count your age by ur BELOVEDs, not by years.
+            This is YOUR life, so count it by SMILES, not by Tears.
+            Count your age by your BELOVEDs, not by years.
             Count your happiness by PASSION, not by regrets ^^.
             Be happy!
-            Today is the day you were brought into this WORLD
+            Today is the day you were brought into this WORLD,
             to be a blessing and inspiration to the people around you!
             You are a WONDERFUL person!
             May you be given more birthdays to fulfill all of your dreams nsh allah 🙏.
             On your birthday,
             I thought of giving you the cutest gift in the world.
             But then I realized that is not POSSIBLE
-            because YOU X, YOURSELF are the CUTEST 🎁 gift in the WORLD ^^.
+            because YOU Yasmine, YOURSELF are the CUTEST 🎁 gift in the WORLD ^^.
             So, Happy, cool, amazing,
             wonderful, beautiful, awesome,
             gorgeous, fantastic, birthday 🎂
             to the
-            X.abulous
-            X.mazing
-            X.op
-            X.ntelligent
-            X.agical
-            X.wesome
-            ===> X🌹, n7abek X.</p>
+            Y.oung, Youthful
+            A.mazing, Authentic, Angelic
+            S.uperb, Simple
+            M.agical, Magnifique
+            I.ntelligent, Iconical
+            N.ice Noble
+            E.xemplary, Efficacious
+            ===> Yasmine🌹, n7abek Yasmine🌹.</p>
             <div class="clearfix"></div>
             <div class="clearfix"></div>
             <h1>Developed using</h1>
