--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             Happy birthday to one of the sweetest people I’ve ever known.
             May Allah bless you with life’s biggest joys
             and never-ending BLISS.
-            After all, you Yasmine, YOURSELF are a gift to this earth,
+            After all, you X, YOURSELF are a gift to this earth,
             so you deserve ALL the best.
             Birthdays are just a new start,
             a fresh beginning
@@ -124,6 +124,7 @@
                 <img src="static/html5.png">
                 <img src="static/css3.png">
             </p>
+            <h1>Made By</h1> <h1><b>El Megales</b></h1>
             <h1>Powered by</h1>
             <p>
                 <img src="static/resized-avat.png">
@@ -141,5 +142,5 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="static/endcredits.js"></script>
 </body>
-<audio src="static/NowWeAreFree.mp3" autoplay> </audio>
+<audio src="static/NowWeAreFree-trim.mp3" autoplay> </audio>
 </html>
