--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
     <div class="jumbotron">
         <h1>Y.S Birthday Letter</h1>
-        <p>Don't you think your site deserves an ending like in the movies? Show all your staff, your thanks, your logos
-            and partners with this component!</p>
+        <p> When I think about you and our rich conversations, I feel a warmness inside. I cannot hide my smiles, 
+            even when we are apart. This connection is special, amazing, and I dare say, destiny.
+        </p>
         <p>
             <a class="btn btn-lg btn-success" href="#creditos" name="creditos">Open the Letter</a>
         </p>
