adding <br> and some clovers

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
     <div class="jumbotron">
         <h1>Y.S Birthday Letter</h1>
-        <p> When I think about you and our rich conversations, I feel a warmness inside. I cannot hide my smiles, 
-            even when we are apart. This connection is special, amazing, and I dare say, destiny.
-        </p>
+        <p>Don't you think your site deserves an ending like in the movies? Show all your staff, your thanks, your logos
+            and partners with this component!</p>
         <p>
             <a class="btn btn-lg btn-success" href="#creditos" name="creditos">Open the Letter</a>
         </p>
@@ -105,14 +104,14 @@
             wonderful, beautiful, awesome,
             gorgeous, fantastic, birthday 🎂
             to the
-            Y.oung, Youthful
-            A.mazing, Authentic, Angelic
-            S.uperb, Simple
-            M.agical, Magnifique
-            I.ntelligent, Iconical
-            N.ice Noble
-            E.xemplary, Efficacious
-            ===> Yasmine🌹, n7abek Yasmine🌹.</p>
+            <br>Y.oung, Youthful
+            <br>A.mazing, Authentic, Angelic
+            <br>S.uperb, Simple
+            <br>M.agical, Magnifique
+            <br>I.ntelligent, Iconical
+            <br>N.ice Noble
+            <br>E.xemplary, Efficacious
+            <br>===> Yasmine🌹, n7abek Yasmine🌹.</p>
             <div class="clearfix"></div>
             <div class="clearfix"></div>
             <h1>Developed using</h1>
@@ -125,7 +124,7 @@
                 <img src="static/html5.png">
                 <img src="static/css3.png">
             </p>
-            <h1>Made By</h1> <h1><b>El Megales</b></h1>
+            <h1>Made By</h1> <h1><b>🍀-El Megales-🍀</b></h1>
             <h1>Powered by</h1>
             <p>
                 <img src="static/resized-avat.png">
@@ -133,8 +132,6 @@
             <h1>Thanks!</h1>
             <div class="clearfix"></div>
             <div class="fineprint">All trademarks are the property of the trademark owners.
-                <br>All premier division football player are the property of premier
-                <br>division football team owners.
             </div>
 
         </div>
@@ -143,5 +140,5 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="static/endcredits.js"></script>
 </body>
-<audio src="static/NowWeAreFree-trim.mp3" autoplay> </audio>
+<audio src="static/NowWeAreFree.mp3" autoplay> </audio>
 </html>
