--- a/index.html
+++ b/index.html
@@ -69,49 +69,53 @@
             <div id="the-end">Dear S.Yasmine</div>
             <br />
             <h1>Cast</h1>
-            <p>In this birthday 04th of July 2022,
-            I wish you abundant happiness and love.
-            May all your dreams turn into reality
-            and may lady luck (that i don't believe on her hhhh) visit you today.
-            Happy birthday to one of the sweetest people I’ve ever known.
-            May Allah bless you with life’s biggest joys
-            and never-ending BLISS.
-            After all, you X, YOURSELF are a gift to this earth,
-            so you deserve ALL the best.
-            Birthdays are just a new start,
-            a fresh beginning
-            and a time to pursue new endeavors,
-            with new goals.
-            So, move FORWARD Yasmine AND KEEP moving FORWARD
-            with confidence and courage,
-            and never look backwards.
-            You are a very special person.
-            May today and all of your days be amazing,
-            cool, superb, and awesome nsh allah!
-            This is YOUR life, so count it by SMILES, not by Tears.
-            Count your age by your BELOVEDs, not by years.
-            Count your happiness by PASSION, not by regrets ^^.
-            Be happy!
-            Today is the day you were brought into this WORLD,
-            to be a blessing and inspiration to the people around you!
-            You are a WONDERFUL person!
-            May you be given more birthdays to fulfill all of your dreams nsh allah 🙏.
-            On your birthday,
-            I thought of giving you the cutest gift in the world.
-            But then I realized that is not POSSIBLE
-            because YOU Yasmine, YOURSELF are the CUTEST 🎁 gift in the WORLD ^^.
-            So, Happy, cool, amazing,
-            wonderful, beautiful, awesome,
-            gorgeous, fantastic, birthday 🎂
-            to the
-            <br>Y.oung, Youthful
-            <br>A.mazing, Authentic, Angelic
-            <br>S.uperb, Simple
-            <br>M.agical, Magnifique
-            <br>I.ntelligent, Iconical
-            <br>N.ice Noble
-            <br>E.xemplary, Efficacious
-            <br>===> Yasmine🌹, n7abek Yasmine🌹.</p>
+            <p>Salemo alaykom Yasmine 🌹 a7la el 7ilwin 🌹 ^^,
+Hope nsh allah that you're doing well 🙏 and so all the family 👪 ❤️ 💙 🙏 
+I know what you're going through now is breakable and hurtful and...and...and alll the bad feelings! Because the same thing am going through now: depressed, bad, sad, heartbroken, not willing to talk to anyone, to enjoy nothing, just a physical body floating in time's river!! Yes, they may not be with the exact feelings, but i do have them now and am kinda on my knees, now energy, no motivation, no desire, no nothing!! Am like a HEART that runs out of BLOOD, like LUNGS that run out of AIR, like a BODY that runs out of HIS SOUL!! like a TREE that has been cut out of her ROOTS! like a PLANT that has been taken out of her GROUND! like a BIRD that lost his DESTINATION and his WAY BACK HOME! like a traveller within the middle of the desert, in a full dark night, no moon no stars that can guide him in his road! Am just a physical body occupying a certain space and domension, no more no less! And what GOODNESS left to that body to EXIST... what AIM left to that body to PURSUIT... what GOALS and OBJECTIVES left to that body to ACHIEVE or to ACCOMPLISH... what REASON left to that body to LIVE nd be ALIVE for?! Nothing, nothing left! I've put the whole of me within this relationship, all my feelings, all my wiilll, all my me within this relationship!! Then, here we are, here it is! 
+I remember that night we were talking and planning for our wedding and how it'll be!
+I remember the 1st days how we were talking about our goals and objectives in this life, for each other, and for our beloved country,  and how high and noble they were!
+I remember that day you were in the kitchen helping mom and you recorded mom telling me: khali el bent tranquille la keshma ta7raglii!
+I remember all mom's records and how warm and kind were they!
+I remember the 1st day we met and that pizza avec la crème fraîche (messoussa), and how we spent the whole evening there talking and admiring the view to each other, while people comes and goes!
+I remember those spots on your face, those sparks ✨️ under your eyes shining and how intense they become when you are shy!
+I remember that smile on your face and how it draws happiness and beauty up on you!
+I remember your laughs, your gestures, your way of talking and moving your shoulder like a beautiful harmony 🎶 that went out of its musical instrument!
+I remember that day in the garden, sitting, laughing, walking, talking, hand in hand attached, hand in hand crossed, hand in hand coupled!
+I remember the same day in our way to the garden, in the car, holding your hand showing you places, showing you where i work! teasing me you were! By knowing all the ways u were kidding me! Looking at you looking outside, eyes up and whispering to each other time to time!
+I remember how annoying and worrying leaving you with yassir or heetch to take you back home! And how insisting i was telling them to bring you saine et sauve back home!
+I remember your touch on my cheek! How soft and warm it was! How kind and shy it was!
+I remember, i remember...i remember...and how long my message would be if i write down all everything i remember!
+I wanted to hug you, to have you between my arms, to make you feel the beats of my heart, the warm of my soul, the strength of the links i made with you!
+I wanted to cover you, to protect you, to help you, to support you, to stand out, tall, and high before you with my chest in front like a fortress between my love and all the harmful things that can come on her way!
+I wanted to be the best man you've ever know, i wanted to be the best thing that has ever happened to you, i wanted to be king in your heart and soul, i wanted to be the all in all for you! I wanted to be the goodness, the happiness, the energy, the pleasure, the life, the motivation, the confidence, the support, the water that would clean all the badness, the sadness, the void, the routine, and the negative vibes within you! 
+I wanted to be the ocean where you can deep dive into it, the blue sky where you can fligh up and high, the ground that you can walk on with confidence and ease, the burning fire that would light your way into this life difficulties, that keeps you always full of patience and motivation, that makes you feel warm into cold dark times, a big larg tree that you will rest on its trunk under her shadow, eating its fruits and enjoying the fresh air moving its brunches and leafs.
+I wanted to be the love that you never get enough of, i wanted to be a good father, a good brother, the best friend, the best man, the best husband, the best companion, the best supporter, the best shoulder that you can put your head on, the best chest that you can lay on!
+I wanted, i willed, and i worked for it! I even changed some of my behaviours that long time ago i considered impossible to change! I was able to take control over my nervous state (sometimes), and sometimes i lose control! But now i know..no but i did live and experienced that everything is possible if we just want to, will to, and work to make it! 
+Sorry i talked a lot, and i think i should stop here (or mark will kick me out of fb because I've consumed all the available messages and letters ^^").
+Yasmine, all my intentions and words and good behaviours were and still true and honest and purely honest, and Allah knows how much i meant them and how true i was towards and with you!
+And am SORRY and i do APOLOGISE: 
+<br>▪︎ For every single bad thing i did to you, or i said to you!</br>
+<br>▪︎ For every bad state i made you go through, or made you live it!</br>
+<br>▪︎ For every good expectation you waited for it from me and i disappointed you on it!</br>
+<br>▪︎ For every good thing you desired or wanted to have and i couldn't bring it to you!</br>
+<br>▪︎ For all the bad things that i was source or part of them!</br>
+<br>▪︎ For all the good things that i wasn't source of, part of, or couldn't made them to you!</br>
+<br>Am SORRY for not being that man you waited for when you went through bad and difficult moments, that man you expected the most to assist you, to support you, to please you, to take care of you!</br>
+<br>I dunno if it's too late to apologise but i have to, that's your right on me!</br>
+<br>At the end and i hoped it won't be the end ^^, i wish you a good, amazing, wonderful life time Yasmine, and i ask Allah the almighty to make these wishes true and that you live it in this life and the hereafter nsh allah!
+You were such a yassashi, kind, beautiful, fullll of feeeelings, emotional, attached, funny, dynamic, waaaarrmm, cuute, gentle girl ^^, i would spend my whole life absorbing alll these kind and warm feelings of you and i will never get enough, bored, or tired of doing it Yasmine ^^.
+Shukran, Tenmirth (kabylian, 🇩🇿), Thank you, Grazie (🇮🇹) , Gracias (🇪🇸), Yanki (🇩🇪), Merci (🇫🇷), Spaciba (🇷🇺), Kamsamhida (🇰🇷 , 3labali deformiteha ^^", but i tried ^^), Arigato (🇯🇵), Yasmine 🌹 for the feelings you had to me, for the love you overwhelmed me with ^^, for the caring you took of me, for the emotions you spread on me, for worrying you had about me, for  everything and anything goood you gave me, you made me live, you shared with me, baraka allahu fiik Yasmine 🌹, my heart would never host someone like you... ^^.</br>
+<br>And for the bad things, oh you never meant them, or went out of control of you, after all you're just a human, and more than that..a woman fragile, soft, and weak, that i felt to take care of her, and i couldnt be at her expectations, or even fulfil what our prophet peace be upon him asked us we men to do:</br> 
+<br>"رفقا بالقوارير"</br>
+<br>ففي الحديث الذي رواه البخاري" «مَن كانَ يُؤْمِنُ باللَّهِ واليَومِ الآخِرِ فلا يُؤْذِي جارَهُ، واسْتَوْصُوا بالنِّساءِ خَيْرًا، فإنَّهُنَّ خُلِقْنَ مِن ضِلَعٍ، وإنَّ أعْوَجَ شيءٍ في الضِّلَعِ أعْلاهُ، فإنْ ذَهَبْتَ تُقِيمُهُ كَسَرْتَهُ، وإنْ تَرَكْتَهُ لَمْ يَزَلْ أعْوَجَ، فاسْتَوْصُوا بالنِّساءِ خَيْرًا»</br>
+<br>Am really sorry for everything and all the things... it really hurts so much, so deep, so intense till the bones, esteghfiro allah..!</br>
+<br>Nti el wa7ida Yasmine li 7abitek w mazelt n7abek b kulshi wesh 3endi w hekak...essam7ila Yasmine ma dirish 3liya, l2inesen heda kholi9a da3ifa w yeb9a da3ifa, essam7ili yel 7biba wel ghalya w roo7 w nefs wel 9alb wel 7oub w sa7iba w rafi9a w senad, wel fare7 w se3eda, wel Ounss, w rafi9a, wel 7abiba, wel kul fil kul, 7abiitek min samim el 9alb w min a3ma9i e ro7, kunti nefas te3i, wel 7ayet te3i, w roo7 te3i, kunti kulshi b nisba liya, essam7ili Yasmine (w allah it brokes my heart to say such words..), 7abitek malika w 7abit nkhalik malika, 7abit nkoun that crown upok your head, 7abit nkoun that valvle in your heart, 7abit nkoun kulshi w fshelt fiih...7abit nkoun w ma kountsh... tell mom am sorry that i couldnt be part of the family, that i couldnt be your successor to take care of your daughter, tell dad am sorry for not being able to succeed you in the chain of love and responsibility towards your daughter, tell ibtissem sorry for not being the 2nd زميل in the family, tell Abdou sorry for not being part of the family and a future good old brother for him, tell marwa am sorry for making her beloved lovely sister goes through all of these broken moments, tell everyone am sorry for my failure, for everything, you're such an amazing great well attached family (a7sabouha w allahu 7assibouha).</br>
+<br>Am into the 12th page now, i dont think messenger would handle all this msg, c par limite of technology (the app) sinon i would right a whole book for you Yasmine ^^.</br>
+<br>Sorry for taking all that long Yasmine (took me 2h and still want to add... ^^").</br>
+<br>I should clôture ce petit simple message and i would love to close it with this part of an Aya from in sourat el ba9ara:</br>
+<br>"وَأَن تَعْفُوا أَقْرَبُ لِلتَّقْوَىٰ ۚ وَلَا تَنسَوُا الْفَضْلَ بَيْنَكُمْ ۚ إِنَّ 
+ "اللَّهَ بِمَا تَعْمَلُونَ بَصِيرٌ"</br>
+<br>Salemo alaykom Yasmine 🌹 a7la el 7ilwin 🌹</br> </p>
             <div class="clearfix"></div>
             <div class="clearfix"></div>
             <h1>Developed using</h1>
