Deleting ending space

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Don't you think your site deserves an ending like in the movies? Show all your staff, your thanks, your logos and partners with this component!">
-    <meta name="author" content="Daniel Malkafly @ Coletivo Bima">
-    <title>End Credits by Coletivo Bima</title>
+    <meta name="author" content="ElMegales">
+    <title>End Credits by El-Megales</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/endcredits.css">
     <!-- Custom styles for this template by getbootstrap.com -->
@@ -144,5 +144,5 @@ Shukran, Tenmirth (kabylian, 🇩🇿), Thank you, Grazie (🇮🇹) , Gracias (
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="static/endcredits.js"></script>
 </body>
-<audio src="static/Until_we_meet_again.mp3" autoplay> </audio>
+<audio src="static/Until_we_meet_again.mp3" autoplay></audio>
 </html>
